fix carousel on mobile ?

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -328,6 +328,7 @@ i[class^="ph"] {
   overflow-x: auto;
   overflow-y: hidden;
   width: 100%;
+  height: auto;
 }
 
 .carousel-card {
